se actualiza la correcion de las predicciones

--- a/CatBoost/CatBoost.ipynb
+++ b/CatBoost/CatBoost.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,20 +21,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {
         "id": "zwkmOo9sBqIZ"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import catboost as cb\n",
         "from base_regressor import BaseRegressor\n",
@@ -60,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -276,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -289,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -298,16 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "y_pred = cat_model.predicter(X_test=cat_model.X_test)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -327,7 +309,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_pred = cat_model.predicter(X_test=cat_model.X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -339,8 +330,8 @@
             "Dep. Variable:                      y   R-squared:                       0.465\n",
             "Model:                            OLS   Adj. R-squared:                  0.463\n",
             "Method:                 Least Squares   F-statistic:                     238.0\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           4.49e-39\n",
-            "Time:                        23:59:03   Log-Likelihood:                -998.98\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           4.49e-39\n",
+            "Time:                        22:29:26   Log-Likelihood:                -998.98\n",
             "No. Observations:                 276   AIC:                             2002.\n",
             "Df Residuals:                     274   BIC:                             2009.\n",
             "Df Model:                           1                                         \n",
@@ -403,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -412,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -424,8 +415,8 @@
             "Dep. Variable:                      y   R-squared:                       0.822\n",
             "Model:                            OLS   Adj. R-squared:                  0.822\n",
             "Method:                 Least Squares   F-statistic:                     5089.\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):               0.00\n",
-            "Time:                        20:21:35   Log-Likelihood:                -3559.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):               0.00\n",
+            "Time:                        22:29:38   Log-Likelihood:                -3559.1\n",
             "No. Observations:                1101   AIC:                             7122.\n",
             "Df Residuals:                    1099   BIC:                             7132.\n",
             "Df Model:                           1                                         \n",
@@ -481,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -490,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -502,8 +493,8 @@
             "Dep. Variable:                      y   R-squared:                       0.552\n",
             "Model:                            OLS   Adj. R-squared:                  0.552\n",
             "Method:                 Least Squares   F-statistic:                     1357.\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          4.25e-194\n",
-            "Time:                        20:21:38   Log-Likelihood:                -3559.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):          4.25e-194\n",
+            "Time:                        22:29:44   Log-Likelihood:                -3559.1\n",
             "No. Observations:                1101   AIC:                             7122.\n",
             "Df Residuals:                    1099   BIC:                             7132.\n",
             "Df Model:                           1                                         \n",
@@ -559,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -568,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -580,8 +571,8 @@
             "Dep. Variable:                      y   R-squared:                       0.741\n",
             "Model:                            OLS   Adj. R-squared:                  0.740\n",
             "Method:                 Least Squares   F-statistic:                     783.1\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           2.60e-82\n",
-            "Time:                        20:21:42   Log-Likelihood:                -998.98\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           2.60e-82\n",
+            "Time:                        22:29:56   Log-Likelihood:                -998.98\n",
             "No. Observations:                 276   AIC:                             2002.\n",
             "Df Residuals:                     274   BIC:                             2009.\n",
             "Df Model:                           1                                         \n",
@@ -637,7 +628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -664,6 +655,27 @@
         "plt.legend()\n",
         "#plt.title(f'MAE antes: {mae_before:.4f}, MAE después: {mae_after:.4f}')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_test_array = cat_model.y_test.to_numpy()\n",
+        "#with open(f'{path}Brain_Age/Age_Array/edad_real_array.pickle', 'wb') as file:\n",
+        "#        pickle.dump(y_test_array, file)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open(f'{path}Brain_Age/Age_Array/cat_edad_predicha_array.pickle', 'wb') as file:\n",
+        "        pickle.dump(y_pred_corrected, file)"
       ]
     },
     {
