--- a/KNN/KNN.ipynb
+++ b/KNN/KNN.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -230,25 +230,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
-        "knn_model.guardar_resultados_trainer(resultados=results)"
+        "with open(f'{path}Opt_Model/BestModel_KNN_all_features.pickle', 'rb') as file:\n",
+        "    model =  pickle.load(file)\n",
+        "    \n",
+        "with open(f'{path}Opt_Model/results_KNN_model_all_features.pickle', 'rb') as file:\n",
+        "    results =  pickle.load(file)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
-        "y_pred =knn_model.predicter(knn_model.X_test)"
+        "knn_model.model=model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -268,6 +272,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_pred =knn_model.predicter(knn_model.X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 15,
       "metadata": {},
       "outputs": [
@@ -280,8 +293,8 @@
             "Dep. Variable:                      y   R-squared:                       0.306\n",
             "Model:                            OLS   Adj. R-squared:                  0.304\n",
             "Method:                 Least Squares   F-statistic:                     120.9\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           1.52e-23\n",
-            "Time:                        20:28:41   Log-Likelihood:                -1007.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           1.52e-23\n",
+            "Time:                        22:50:31   Log-Likelihood:                -1007.1\n",
             "No. Observations:                 276   AIC:                             2018.\n",
             "Df Residuals:                     274   BIC:                             2025.\n",
             "Df Model:                           1                                         \n",
@@ -358,8 +371,8 @@
             "Dep. Variable:                      y   R-squared:                       0.927\n",
             "Model:                            OLS   Adj. R-squared:                  0.927\n",
             "Method:                 Least Squares   F-statistic:                 1.392e+04\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):               0.00\n",
-            "Time:                        20:28:53   Log-Likelihood:                -3385.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):               0.00\n",
+            "Time:                        22:50:40   Log-Likelihood:                -3385.1\n",
             "No. Observations:                1101   AIC:                             6774.\n",
             "Df Residuals:                    1099   BIC:                             6784.\n",
             "Df Model:                           1                                         \n",
@@ -436,8 +449,8 @@
             "Dep. Variable:                      y   R-squared:                       0.064\n",
             "Model:                            OLS   Adj. R-squared:                  0.063\n",
             "Method:                 Least Squares   F-statistic:                     75.47\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           1.33e-17\n",
-            "Time:                        20:28:57   Log-Likelihood:                -3385.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           1.33e-17\n",
+            "Time:                        22:50:45   Log-Likelihood:                -3385.1\n",
             "No. Observations:                1101   AIC:                             6774.\n",
             "Df Residuals:                    1099   BIC:                             6784.\n",
             "Df Model:                           1                                         \n",
@@ -514,8 +527,8 @@
             "Dep. Variable:                      y   R-squared:                       0.398\n",
             "Model:                            OLS   Adj. R-squared:                  0.396\n",
             "Method:                 Least Squares   F-statistic:                     181.0\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           5.09e-32\n",
-            "Time:                        20:29:01   Log-Likelihood:                -1007.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           5.09e-32\n",
+            "Time:                        22:50:48   Log-Likelihood:                -1007.1\n",
             "No. Observations:                 276   AIC:                             2018.\n",
             "Df Residuals:                     274   BIC:                             2025.\n",
             "Df Model:                           1                                         \n",
@@ -598,6 +611,16 @@
         "plt.legend()\n",
         "#plt.title(f'MAE antes: {mae_before:.4f}, MAE después: {mae_after:.4f}')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#with open(f'{path}Brain_Age/Age_Array/knn_edad_predicha_array.pickle', 'wb') as file:\n",
+        "#        pickle.dump(y_pred_corrected, file)"
       ]
     },
     {
