--- a/MLP/MLP.ipynb
+++ b/MLP/MLP.ipynb
@@ -784,36 +784,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n",
-            "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "results, best_model_results , best_model= mlp_model.trainer(params_=best_params_mlp[0])"
       ]
@@ -832,22 +805,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
         "with open(f'{path}Opt_Model/results_MLP_model_all_features.pickle', 'rb') as file:\n",
-        "    results =  pickle.load(file)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "    results =  pickle.load(file)\n",
+        "\n",
         "with open(f'{path}Opt_Model/BestModel_MLP_all_features.pickle', 'rb') as file:\n",
-        "    best_model =  pickle.load(file)"
+        "    model =  pickle.load(file)"
       ]
     },
     {
@@ -861,25 +827,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "mlp_model.model=best_model"
+        "mlp_model.model=model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "y_pred = mlp_model.predicter(mlp_model.X_test)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -899,7 +856,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_pred = mlp_model.predicter(mlp_model.X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -911,8 +877,8 @@
             "Dep. Variable:                      y   R-squared:                       0.373\n",
             "Model:                            OLS   Adj. R-squared:                  0.371\n",
             "Method:                 Least Squares   F-statistic:                     162.9\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           1.37e-29\n",
-            "Time:                        21:34:21   Log-Likelihood:                -1056.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           1.37e-29\n",
+            "Time:                        22:52:44   Log-Likelihood:                -1056.1\n",
             "No. Observations:                 276   AIC:                             2116.\n",
             "Df Residuals:                     274   BIC:                             2123.\n",
             "Df Model:                           1                                         \n",
@@ -975,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -984,7 +950,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -996,8 +962,8 @@
             "Dep. Variable:                      y   R-squared:                       0.485\n",
             "Model:                            OLS   Adj. R-squared:                  0.484\n",
             "Method:                 Least Squares   F-statistic:                     1033.\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          2.23e-160\n",
-            "Time:                        21:34:26   Log-Likelihood:                -4058.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):          2.23e-160\n",
+            "Time:                        22:52:49   Log-Likelihood:                -4058.1\n",
             "No. Observations:                1101   AIC:                             8120.\n",
             "Df Residuals:                    1099   BIC:                             8130.\n",
             "Df Model:                           1                                         \n",
@@ -1053,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1062,7 +1028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1074,8 +1040,8 @@
             "Dep. Variable:                      y   R-squared:                       0.549\n",
             "Model:                            OLS   Adj. R-squared:                  0.549\n",
             "Method:                 Least Squares   F-statistic:                     1339.\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          2.10e-192\n",
-            "Time:                        21:34:30   Log-Likelihood:                -4058.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):          2.10e-192\n",
+            "Time:                        22:52:52   Log-Likelihood:                -4058.1\n",
             "No. Observations:                1101   AIC:                             8120.\n",
             "Df Residuals:                    1099   BIC:                             8130.\n",
             "Df Model:                           1                                         \n",
@@ -1131,7 +1097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1140,7 +1106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1152,8 +1118,8 @@
             "Dep. Variable:                      y   R-squared:                       0.751\n",
             "Model:                            OLS   Adj. R-squared:                  0.750\n",
             "Method:                 Least Squares   F-statistic:                     825.1\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           1.24e-84\n",
-            "Time:                        21:34:34   Log-Likelihood:                -1056.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           1.24e-84\n",
+            "Time:                        22:52:55   Log-Likelihood:                -1056.1\n",
             "No. Observations:                 276   AIC:                             2116.\n",
             "Df Residuals:                     274   BIC:                             2123.\n",
             "Df Model:                           1                                         \n",
@@ -1209,7 +1175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1236,6 +1202,16 @@
         "plt.legend()\n",
         "#plt.title(f'MAE antes: {mae_before:.4f}, MAE después: {mae_after:.4f}')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#with open(f'{path}Brain_Age/Age_Array/mlp_edad_predicha_array.pickle', 'wb') as file:\n",
+        "#        pickle.dump(y_pred_corrected, file)"
       ]
     },
     {
