--- a/XGBoost/Brain_Age_40_1electrode.ipynb
+++ b/XGBoost/Brain_Age_40_1electrode.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,14 +284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:254: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:254: OptimizeWarning: Covariance of the parameters could not be estimated\n",
       "  popt, pcov = curve_fit(self.exponential_decay, t, y_true, p0=[C_true, tau_true, b_true])\n"
      ]
     },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "  'subsample': 0.6402650378459261}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -858,8 +858,8 @@
       "Dep. Variable:                      y   R-squared:                       0.177\n",
       "Model:                            OLS   Adj. R-squared:                  0.172\n",
       "Method:                 Least Squares   F-statistic:                     33.19\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           4.41e-08\n",
-      "Time:                        22:04:08   Log-Likelihood:                -405.56\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):           4.41e-08\n",
+      "Time:                        13:31:42   Log-Likelihood:                -405.56\n",
       "No. Observations:                 156   AIC:                             815.1\n",
       "Df Residuals:                     154   BIC:                             821.2\n",
       "Df Model:                           1                                         \n",
@@ -884,7 +884,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -936,8 +936,8 @@
       "Dep. Variable:                      y   R-squared:                       0.578\n",
       "Model:                            OLS   Adj. R-squared:                  0.577\n",
       "Method:                 Least Squares   F-statistic:                     847.7\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          4.06e-118\n",
-      "Time:                        22:04:18   Log-Likelihood:                -1497.7\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):          4.06e-118\n",
+      "Time:                        13:31:46   Log-Likelihood:                -1497.7\n",
       "No. Observations:                 622   AIC:                             2999.\n",
       "Df Residuals:                     620   BIC:                             3008.\n",
       "Df Model:                           1                                         \n",
@@ -962,7 +962,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1014,8 +1014,8 @@
       "Dep. Variable:                      y   R-squared:                       0.857\n",
       "Model:                            OLS   Adj. R-squared:                  0.857\n",
       "Method:                 Least Squares   F-statistic:                     3719.\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          3.84e-264\n",
-      "Time:                        22:04:23   Log-Likelihood:                -1497.7\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):          3.84e-264\n",
+      "Time:                        13:31:50   Log-Likelihood:                -1497.7\n",
       "No. Observations:                 622   AIC:                             2999.\n",
       "Df Residuals:                     620   BIC:                             3008.\n",
       "Df Model:                           1                                         \n",
@@ -1040,7 +1040,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1092,8 +1092,8 @@
       "Dep. Variable:                      y   R-squared:                       0.859\n",
       "Model:                            OLS   Adj. R-squared:                  0.858\n",
       "Method:                 Least Squares   F-statistic:                     935.3\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           2.63e-67\n",
-      "Time:                        22:04:27   Log-Likelihood:                -405.56\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):           2.63e-67\n",
+      "Time:                        13:31:54   Log-Likelihood:                -405.56\n",
       "No. Observations:                 156   AIC:                             815.1\n",
       "Df Residuals:                     154   BIC:                             821.2\n",
       "Df Model:                           1                                         \n",
@@ -1118,7 +1118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1176,6 +1176,16 @@
     "plt.legend()\n",
     "#plt.title(f'MAE antes: {mae_before:.4f}, MAE después: {mae_after:.4f}')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Brain_Age/Age_Array/xgb_edad_predicha_array_1electrode_40A.pickle', 'wb') as file:\n",
+    "        pickle.dump(y_pred, file)"
    ]
   }
  ],
