--- a/XGBoost/Brain_age_1_electrode.ipynb
+++ b/XGBoost/Brain_age_1_electrode.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "[1324 rows x 39 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,14 +993,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain_Age_\\brain_age_env\\Lib\\site-packages\\seaborn\\axisgrid.py:854: FutureWarning: \n",
+      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\seaborn\\axisgrid.py:854: FutureWarning: \n",
       "\n",
       "`shade` is now deprecated in favor of `fill`; setting `fill=True`.\n",
       "This will become an error in seaborn v0.14.0; please update your code.\n",
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
        "  'subsample': 0.6}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,6 +1218,18 @@
    "outputs": [],
    "source": [
     "results, best_model_results, best_model = xgb_model.trainer(params_=best_params_xgb[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Opt_Model/BestModel_XGB_all_features_1electrode.pickle', 'wb') as file:\n",
+    "    pickle.dump(best_model, file)\n",
+    "with open(f'{path}Opt_Model/results_XGB_model_all_features_1electrode.pickle', 'wb') as file:\n",
+    "    pickle.dump(results, file)"
    ]
   },
   {
@@ -1242,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,30 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test_array = xgb_model.y_test.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('C:/Users/felipe/Documents/edad_real_1electrode_pandas.pickle', 'wb') as file:\n",
-    "        pickle.dump(xgb_model.y_test, file)\n",
-    "with open('C:/Users/felipe/Documents/edad_real_1electrode_array.pickle', 'wb') as file:\n",
-    "        pickle.dump(y_test_array, file)\n",
-    "with open('C:/Users/felipe/Documents/edad_predicha_1electrode_array.pickle', 'wb') as file:\n",
-    "        pickle.dump(y_pred, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1286,8 +1275,8 @@
       "Dep. Variable:                      y   R-squared:                       0.505\n",
       "Model:                            OLS   Adj. R-squared:                  0.503\n",
       "Method:                 Least Squares   F-statistic:                     268.4\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           4.62e-42\n",
-      "Time:                        22:00:33   Log-Likelihood:                -976.64\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):           4.62e-42\n",
+      "Time:                        13:00:21   Log-Likelihood:                -976.64\n",
       "No. Observations:                 265   AIC:                             1957.\n",
       "Df Residuals:                     263   BIC:                             1964.\n",
       "Df Model:                           1                                         \n",
@@ -1312,7 +1301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -1343,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1364,8 +1353,8 @@
       "Dep. Variable:                      y   R-squared:                       0.697\n",
       "Model:                            OLS   Adj. R-squared:                  0.696\n",
       "Method:                 Least Squares   F-statistic:                     2426.\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          5.96e-276\n",
-      "Time:                        22:00:38   Log-Likelihood:                -3699.2\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):          5.96e-276\n",
+      "Time:                        13:00:26   Log-Likelihood:                -3699.2\n",
       "No. Observations:                1059   AIC:                             7402.\n",
       "Df Residuals:                    1057   BIC:                             7412.\n",
       "Df Model:                           1                                         \n",
@@ -1390,7 +1379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -1421,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1442,8 +1431,8 @@
       "Dep. Variable:                      y   R-squared:                       0.512\n",
       "Model:                            OLS   Adj. R-squared:                  0.512\n",
       "Method:                 Least Squares   F-statistic:                     1109.\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          7.46e-167\n",
-      "Time:                        22:00:42   Log-Likelihood:                -3699.2\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):          7.46e-167\n",
+      "Time:                        13:00:29   Log-Likelihood:                -3699.2\n",
       "No. Observations:                1059   AIC:                             7402.\n",
       "Df Residuals:                    1057   BIC:                             7412.\n",
       "Df Model:                           1                                         \n",
@@ -1468,7 +1457,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -1499,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1520,8 +1509,8 @@
       "Dep. Variable:                      y   R-squared:                       0.772\n",
       "Model:                            OLS   Adj. R-squared:                  0.771\n",
       "Method:                 Least Squares   F-statistic:                     891.7\n",
-      "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           1.80e-86\n",
-      "Time:                        22:00:45   Log-Likelihood:                -976.64\n",
+      "Date:                Sat, 17 Aug 2024   Prob (F-statistic):           1.80e-86\n",
+      "Time:                        13:00:36   Log-Likelihood:                -976.64\n",
       "No. Observations:                 265   AIC:                             1957.\n",
       "Df Residuals:                     263   BIC:                             1964.\n",
       "Df Model:                           1                                         \n",
@@ -1546,7 +1535,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users/felipe/Documents/Brain\\base_regressor.py:358: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  p_value = linear_model.pvalues[1]\n"
      ]
     },
@@ -1577,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1604,6 +1593,16 @@
     "plt.legend()\n",
     "#plt.title(f'MAE antes: {mae_before:.4f}, MAE después: {mae_after:.4f}')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Brain_Age/Age_Array/xgb_edad_predicha_array_1electrode.pickle', 'wb') as file:\n",
+    "        pickle.dump(y_pred, file)"
    ]
   },
   {
