--- a/Random_Forest/Random_Forest.ipynb
+++ b/Random_Forest/Random_Forest.ipynb
@@ -286,16 +286,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
-        "y_pred = rf_model.predicter(rf_model.X_test)"
+        "rf_model.model=model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -315,7 +315,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_pred = rf_model.predicter(rf_model.X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -327,8 +336,8 @@
             "Dep. Variable:                      y   R-squared:                       0.392\n",
             "Model:                            OLS   Adj. R-squared:                  0.390\n",
             "Method:                 Least Squares   F-statistic:                     176.7\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           1.88e-31\n",
-            "Time:                        20:42:46   Log-Likelihood:                -986.96\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           1.88e-31\n",
+            "Time:                        23:13:07   Log-Likelihood:                -986.96\n",
             "No. Observations:                 276   AIC:                             1978.\n",
             "Df Residuals:                     274   BIC:                             1985.\n",
             "Df Model:                           1                                         \n",
@@ -384,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -393,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -405,8 +414,8 @@
             "Dep. Variable:                      y   R-squared:                       0.867\n",
             "Model:                            OLS   Adj. R-squared:                  0.867\n",
             "Method:                 Least Squares   F-statistic:                     7190.\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):               0.00\n",
-            "Time:                        20:42:53   Log-Likelihood:                -3512.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):               0.00\n",
+            "Time:                        23:13:11   Log-Likelihood:                -3512.1\n",
             "No. Observations:                1101   AIC:                             7028.\n",
             "Df Residuals:                    1099   BIC:                             7038.\n",
             "Df Model:                           1                                         \n",
@@ -462,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -471,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -483,8 +492,8 @@
             "Dep. Variable:                      y   R-squared:                       0.418\n",
             "Model:                            OLS   Adj. R-squared:                  0.417\n",
             "Method:                 Least Squares   F-statistic:                     788.9\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):          2.77e-131\n",
-            "Time:                        20:43:05   Log-Likelihood:                -3512.1\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):          2.77e-131\n",
+            "Time:                        23:13:15   Log-Likelihood:                -3512.1\n",
             "No. Observations:                1101   AIC:                             7028.\n",
             "Df Residuals:                    1099   BIC:                             7038.\n",
             "Df Model:                           1                                         \n",
@@ -540,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -549,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -561,8 +570,8 @@
             "Dep. Variable:                      y   R-squared:                       0.656\n",
             "Model:                            OLS   Adj. R-squared:                  0.655\n",
             "Method:                 Least Squares   F-statistic:                     523.3\n",
-            "Date:                Wed, 14 Aug 2024   Prob (F-statistic):           1.66e-65\n",
-            "Time:                        20:43:09   Log-Likelihood:                -986.96\n",
+            "Date:                Thu, 15 Aug 2024   Prob (F-statistic):           1.66e-65\n",
+            "Time:                        23:13:18   Log-Likelihood:                -986.96\n",
             "No. Observations:                 276   AIC:                             1978.\n",
             "Df Residuals:                     274   BIC:                             1985.\n",
             "Df Model:                           1                                         \n",
@@ -618,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -645,6 +654,16 @@
         "plt.legend()\n",
         "#plt.title(f'MAE antes: {mae_before:.4f}, MAE después: {mae_after:.4f}')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#with open(f'{path}Brain_Age/Age_Array/rf_edad_predicha_array.pickle', 'wb') as file:\n",
+        "#        pickle.dump(y_pred_corrected, file)"
       ]
     },
     {
